<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.view.EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="35dp"
                    android:text="@string/edit_activity"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlTaskTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:backgroundTint="@color/ziggurat"
                    android:textColorHint="@color/tradewind"  >

                    <EditText
                        android:id="@+id/etTaskTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/ziggurat"
                        android:ems="10"
                        android:hint="@string/hint_do_the_homework"
                        android:inputType="textCapSentences"
                        android:maxLength="255"
                        android:textColor="@color/surfie_green"

                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkboxRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:checked="true"
                    android:layout_marginTop="29dp"
                    android:text="@string/remember"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:buttonTint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvExpiryDateEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="1.2"
                        android:background="@android:drawable/editbox_background_normal"
                        android:backgroundTint="@color/ziggurat"
                        android:gravity="center"
                        android:textColor="@color/surfie_green"
                        android:textSize="20sp"
                        app:drawableEndCompat="@android:drawable/ic_menu_today"
                        tools:text="27/07/2023" />

                    <TextView
                        android:id="@+id/tvExpiryTimeEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background_normal"
                        android:backgroundTint="@color/ziggurat"
                        android:gravity="center"
                        android:textColor="@color/surfie_green"
                        android:textSize="20sp"
                        app:drawableEndCompat="@android:drawable/ic_menu_recent_history"
                        tools:text="04:00 PM" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/steps"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTaskSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:backgroundTint="@color/ziggurat" />

                <ImageButton
                    android:id="@+id/btnAddTaskStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:backgroundTint="@color/apricot"
                    android:src="@android:drawable/ic_input_add"
                    app:tint="@color/white" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btnCancelTaskEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/apricot"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnApplyTaskEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/apricot"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>